# artemis

./: .changie.yaml  .gitignore  .justfile  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  Vagrantfile  deny.toml
apollo/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apollo/src-tauri/capabilities/: default.json
apollo/src-tauri/icons/: icon.icns
apollo/src-tauri/src/: app.rs  main.rs
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: app.rs  main.rs
artemis-core/: Cargo.toml  build.rs
artemis-core/benches/: bits_benchmark.rs  macho_benchmark.rs  shimcache_benchmark.rs  userassist_benchmark.rs
artemis-core/examples/: artemis_core.rs
artemis-core/javascript/: console.js  encoding.js  filesystem.js  http.js  main.js  system.js  systeminfo.js  time.js
artemis-core/src/: core.rs  error.rs  lib.rs
artemis-core/src/artifacts/: collection.rs  freebsd_collection.rs  linux_collection.rs  macos_collection.rs  mod.rs  windows_collection.rs
artemis-core/src/filesystem/: directory.rs  error.rs  files.rs  metadata.rs  mod.rs
artemis-core/src/output/: mod.rs
artemis-core/src/runtime/: deno.rs  error.rs  mod.rs  run.rs
artemis-core/src/structs/: mod.rs  toml.rs
artemis-core/src/utils/: artemis_toml.rs  compression.rs  encoding.rs  environment.rs  error.rs  logging.rs  mod.rs  nom_helper.rs  output.rs  regex_options.rs  strings.rs  time.rs  uuid.rs
artemis-core/tests/: amcache_tester.rs  bits_tester.rs  chromiom_tester.rs  cron_tester.rs  emond_tester.rs  eventlog_tester.rs  execpolicy_tester.rs  filelist_tester.rs  firefox_tester.rs  fsevents_tester.rs  journal_tester.rs  jumplists_tester.rs  launchd_tester.rs  loginitems_tester.rs  logon_tester.rs  ntfs_tester.rs  prefetch_tester.rs  process_tester.rs  quick_linux_tester.rs  quick_macos_tester.rs  quick_win_tester.rs  recycle_bin_tester.rs  registry_tester.rs  runtime_tester.rs  runttime_filter_tester.rs  search_tester.rs  services_tester.rs  shell_history_tester.rs  shellbags_tester.rs  shimcache_tester.rs  shimdb_tester.rs  shortcuts_tester.rs  spotlight_tester.rs  srum_tester.rs  sudologs_tester.rs  systeminfo_test.rs  tasks_tester.rs  unifiedlogs_tester.rs  userassist_tester.rs  users_tester.rs  (+2 more)
artemis-core/tests/test_data/: macos.toml  windows.toml
artemis-core/typescript/: README.md  console.ts  encoding.ts  environment.ts  filesystem.ts  http.ts  main.ts  systeminfo.ts  time.ts  tsconfig.json
cli/: Cargo.toml
cli/src/: main.rs
cli/src/collector/: artifacts.rs  commands.rs  linux.rs  macos.rs  mod.rs  system.rs  windows.rs
client/: Cargo.toml
client/examples/: start_client.rs
client/src/: client.rs  lib.rs
client/src/enrollment/: enroll.rs  error.rs  info.rs  mod.rs
client/src/filesystem/: config.rs  directory.rs  error.rs  files.rs  mod.rs
client/src/socket/: collections.rs  connect.rs  error.rs  heartbeat.rs  jobs.rs  mod.rs
client/tests/test_data/: client.toml
common/: Cargo.toml
common/src/: applications.rs  files.rs  lib.rs  linux.rs  macos.rs  outlook.rs  server.rs  system.rs  unix.rs  windows.rs
common/src/server/: collections.rs  config.rs  enrollment.rs  heartbeat.rs  jobs.rs  mod.rs  webui.rs
core/: Cargo.toml  build.rs
core/benches/: bits_benchmark.rs  macho_benchmark.rs  shimcache_benchmark.rs  userassist_benchmark.rs
core/examples/: artemis_core.rs  script_tester.rs
core/javascript/: README.md  compression.js  console.js  decryption.js  encoding.js  environment.js  http.js  main.js
core/src/: core.rs  lib.rs
core/src/artifacts/: collection.rs  mod.rs  output.rs
core/src/filesystem/: acquire.rs  directory.rs  error.rs  files.rs  (+1 more)
core/tests/: amcache_tester.rs  bits_tester.rs  chromium_tester.rs  cron_tester.rs  emond_tester.rs  eventlog_tester.rs  execpolicy_tester.rs  filelist_tester.rs  firefox_tester.rs  fsevents_tester.rs  journal_tester.rs  jumplists_tester.rs  launchd_tester.rs  loginitems_tester.rs  logon_tester.rs  mft_tester.rs  ntfs_tester.rs  prefetch_tester.rs  process_tester.rs  quick_linux_tester.rs  quick_macos_tester.rs  quick_win_tester.rs  recycle_bin_tester.rs  registry_tester.rs  runtime_tester.rs  runttime_filter_tester.rs  search_tester.rs  services_tester.rs  shell_history_tester.rs  shellbags_tester.rs  shimcache_tester.rs  shimdb_tester.rs  shortcuts_tester.rs  spotlight_tester.rs  srum_tester.rs  sudologs_tester.rs  systeminfo_test.rs  tasks_tester.rs  unifiedlogs_tester.rs  userassist_tester.rs  (+3 more)
core/typescript/: compression.ts  decryption.ts  encoding.ts  http.ts  system.ts  time.ts  tsconfig.json
daemon/: Cargo.toml  Dockerfile  build.rs
daemon/examples/: daemon_mode.rs
daemon/src/: error.rs  lib.rs  start.rs
forensics/: Cargo.toml  build.rs
forensics/benches/: amcache_benchmark.rs  bits_benchmark.rs  jumplists_benchmark.rs  macho_benchmark.rs  shimcache_benchmark.rs  userassist_benchmark.rs
forensics/examples/: artemis_core.rs  script_tester.rs
forensics/src/: core.rs  error.rs  lib.rs
forensics/tests/: amcache_tester.rs  bits_tester.rs  cron_tester.rs  emond_tester.rs  eventlog_tester.rs  execpolicy_tester.rs  filelist_tester.rs  fsevents_tester.rs  journal_tester.rs  jumplists_tester.rs  launchd_tester.rs  loginitems_tester.rs  logon_tester.rs  mft_tester.rs  ntfs_tester.rs  parquet_tester.rs  prefetch_tester.rs  process_tester.rs  qcow_tester.rs  quick_linux_tester.rs  quick_macos_tester.rs  quick_win_tester.rs  recycle_bin_tester.rs  registry_tester.rs  report_tester.rs  runtime_tester.rs  runttime_filter_tester.rs  search_tester.rs  services_tester.rs  shell_history_tester.rs  shellbags_tester.rs  shimcache_tester.rs  shimdb_tester.rs  shortcuts_tester.rs  spotlight_tester.rs  srum_tester.rs  sudologs_tester.rs  systeminfo_test.rs  tasks_tester.rs  triage_tester.rs  (+5 more)
server/: Cargo.toml
server/examples/: start_server.rs
server/src/: lib.rs  routes.rs  server.rs
webui/: Cargo.toml  README.md  Trunk.toml  TrunkWin.toml  index.html  leptosfmt.toml  tailwind.config.js
webui/icons/: README.md
webui/src/: main.rs
(+3357 files in other folders)
