[workspace]
members = ["cli", "forensics", "common", "timeline", "daemon"]
resolver = "3"

[profile.release]
strip = true

[profile.profile]
inherits = "release"
strip = false

[profile.release-action]
inherits = "release"
strip = true
lto = true
codegen-units = 1

[workspace.package]
version = "0.20.0"
homepage = "https://puffycid.github.io/artemis-api"
repository = "https://github.com/puffycid/artemis"
license = "MIT"
edition = "2024"
description = "A cross platform forensic parser"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
serde_json = "1.0.150"
toml = "1.1.2"
base64 = "0.22.1"
tokio = { version = "1.52.3", features = ["full"] }
flate2 = "1.1.9"
glob = "0.3.3"
reqwest = { version = "0.13.4", features = [
    "json",
    "blocking",
    "multipart",
    "form",
] }
sysinfo = "0.39.5"
uuid = { version = "1.23.4", features = ["v4"] }
rusqlite = { version = "0.40.1", features = ["bundled", "serde_json"] }
fastrand = { version = "2.4.1", default-features = false, features = ["std"] }
chrono = "0.4.45"
