[package]
name = "artemis-core"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
log = "0.4.20"
serde_json = "1.0.108"
toml = "0.8.6"
base64 = "0.21.5"
nom = "7.1.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
md-5 = "0.10.6"
sha-1 = "0.10.1"
sha2 = "0.10.8"
regex = "1.10.2"
byteorder = "1.5.0"
walkdir = "2.4.0"
sysinfo = "0.29.10"
home = "0.5.5"
uuid = { version = "1.5.0", features = ["v4"] }
chrono = "0.4.31"
flate2 = "1.0.28"
simplelog = "0.12.1"
zip = { version = "0.6.6", default-features = false }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
jsonwebtoken = "9.1.0"
rusty-s3 = "0.5.0"
glob = "0.3.1"
quick-xml = { version = "0.31.0", default-features = false }
xml2json-rs = "1.0.1"

# Deno Runtime integration
deno_core = { version = "0.225.0" }
tokio = { version = "1.33.0" }

# Windows Dependencies
[target.'cfg(target_family = "windows")'.dependencies]
ntapi = "0.4.1"
evtx = { version = "0.8.1", default-features = false, features = [
    "multithreading",
] }
ntfs = "0.4.0"
pelite = "0.10.0"

# Linux Dependencies
[target.'cfg(target_os = "linux")'.dependencies]
elf = "0.7.3"
ruzstd = "0.5.0"
lz4_flex = "0.11.1"
xz2 = { version = "0.1.7", default-features = false, features = ["static"] }

# macOS Dependencies
[target.'cfg(target_os = "macos")'.dependencies]
macos-unifiedlogs = { git = "https://github.com/mandiant/macos-UnifiedLogs", rev = "06c6a94be890442928df65ab37e834d2723c9e3d" }
plist = "1.6.0"

# Dependencies at compile time
[build-dependencies]
deno_core = { version = "0.225.0" }

# Dependencies for tests
[dev-dependencies]
httpmock = "0.6.8"
criterion = "0.5.1"

# Some benchmarking
[[bench]]
name = "macho_benchmark"
harness = false

[[bench]]
name = "shimcache_benchmark"
harness = false

[[bench]]
name = "userassist_benchmark"
harness = false
