[package]
name = "artemis-core"
edition = { workspace = true }
version = { workspace = true }
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true }
glob = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }
nom = "7.1.3"
rusqlite = { version = "0.30.0", features = ["bundled"] }
md-5 = "0.10.6"
sha-1 = "0.10.1"
sha2 = "0.10.8"
regex = "1.10.3"
byteorder = "1.5.0"
walkdir = "2.4.0"
home = "0.5.9"
chrono = "0.4.34"
simplelog = "0.12.1"
zip = { version = "0.6.6", default-features = false }
jsonwebtoken = "9.2.0"
rusty-s3 = "0.5.0"
quick-xml = { version = "0.31.0", default-features = false }
xml2json-rs = "1.0.1"

common = { path = "../common" }

# Deno Runtime integration
deno_core = { version = "0.261.0" }
tokio = { workspace = true }

# Windows Dependencies
[target.'cfg(target_family = "windows")'.dependencies]
ntapi = "0.4.1"
evtx = { version = "0.8.1", default-features = false, features = [
    "multithreading",
] }
ntfs = "0.4.0"
pelite = "0.10.0"

# Linux Dependencies
[target.'cfg(target_os = "linux")'.dependencies]
elf = "0.7.4"
ruzstd = "0.5.0"
lz4_flex = "0.11.2"
xz2 = { version = "0.1.7", default-features = false, features = ["static"] }

# macOS Dependencies
[target.'cfg(target_os = "macos")'.dependencies]
macos-unifiedlogs = { git = "https://github.com/mandiant/macos-UnifiedLogs", rev = "f7b475e7d201d7dd831f9ecf3536af4d65bd1c52" }
plist = "1.6.0"

# Dependencies at compile time
[build-dependencies]
deno_core = { version = "0.261.0" }

# Dependencies for tests
[dev-dependencies]
httpmock = "0.7.0"
criterion = "0.5.1"

# Some benchmarking
[[bench]]
name = "macho_benchmark"
harness = false

[[bench]]
name = "shimcache_benchmark"
harness = false

[[bench]]
name = "userassist_benchmark"
harness = false

[[bench]]
name = "bits_benchmark"
harness = false
