[package]
name = "artemis"
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
base64 = { workspace = true }
log = { workspace = true }
core = { path = "../core", default-features = false }
clap = { version = "4.5.37", features = ["std", "help", "derive"] }

# Artemis features
[features]
default = ["yarax"]
yarax = ["core/yarax"]
