[package]
name = "artemis"
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[dependencies]
base64 = { workspace = true }
log = { workspace = true }
forensics = { path = "../forensics", default-features = false }
clap = { version = "4.5.40", features = ["std", "help", "derive"] }

# Artemis features
[features]
default = ["yarax"]
yarax = ["forensics/yarax"]
