[package]
name = "artemis"
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[dependencies]
base64 = { workspace = true }
tracing = { workspace = true }
forensics = { path = "../forensics", default-features = false }
clap = { version = "4.6.4", features = ["std", "help", "derive"] }

# Artemis features
[features]
default = ["yarax", "cloud", "boa"]
yarax = ["forensics/yarax"]
cloud = ["forensics/gcp", "forensics/aws", "forensics/azure", "forensics/api"]
boa = ["forensics/boa"]