[package]
name = "client"
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
sysinfo = { workspace = true }

common = { path = "../common" }

tokio-tungstenite = "0.23.0"

[dev-dependencies]
httpmock = "0.7.0"
