[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

# macOS Dependencies
[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.6.0"
