[package]
name = "common"
edition = { workspace = true }
version = { workspace = true }
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

# Unix Dependencies
[target.'cfg(target_family = "unix")'.dependencies]
plist = "1.6.0"
