[package]
name = "core"
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true }
glob = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }
nom = "7.1.3"
rusqlite = { version = "0.32.1", features = ["bundled", "serde_json"] }
md-5 = "0.10.6"
sha-1 = "0.10.1"
sha2 = "0.10.8"
regex = "1.11.0"
byteorder = "1.5.0"
walkdir = "2.5.0"
home = "0.5.9"
chrono = "0.4.38"
simplelog = "0.12.2"
zip = { version = "2.2.0", default-features = false }
jsonwebtoken = "9.3.0"
rusty-s3 = "0.5.0"
quick-xml = { version = "0.36.2", default-features = false }
xml2json-rs = "1.0.1"
evtx = { version = "0.8.3", default-features = false, features = [
    "multithreading",
] }
ntfs = "0.4.0"
pelite = "0.10.0"
elf = "0.7.4"
ruzstd = "0.7.2"
lz4_flex = "0.11.3"
xz2 = { version = "0.1.7", default-features = false, features = ["static"] }
macos-unifiedlogs = { git = "https://github.com/mandiant/macos-UnifiedLogs", rev = "6eade82fe9938c7818ab22c7ca24d133d90565c7" }
plist = "1.7.0"
aes = "0.8.4"
cbc = "0.1.2"
yara-x = "0.8.0"
csv = "1.3.0"

common = { path = "../common" }

# Deno Runtime integration
deno_core = { version = "0.311.0" }
tokio = { workspace = true }

# Windows API Dependencies
[target.'cfg(target_os = "windows")'.dependencies]
ntapi = "0.4.1"

# Dependencies at compile time
[build-dependencies]
deno_core = { version = "0.311.0" }

# Dependencies for tests
[dev-dependencies]
httpmock = "0.7.0"
criterion = "0.5.1"

# Some benchmarking
[[bench]]
name = "macho_benchmark"
harness = false

[[bench]]
name = "shimcache_benchmark"
harness = false

[[bench]]
name = "userassist_benchmark"
harness = false

[[bench]]
name = "bits_benchmark"
harness = false
