[package]
name = "daemon"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
build = "build.rs"

[dependencies]
serde = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }

chrono = "0.4.41"

common = { path = "../common" }
forensics = { path = "../forensics", default-features = false }

# Dependencies for tests
[dev-dependencies]
httpmock = "0.7.0"
criterion = "0.6.0"

[build-dependencies]
vergen = { version = "9.0.6", features = ["build", "rustc"] }
