[package]
name = "daemon"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
build = "build.rs"

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
fastrand = { workspace = true }
chrono = { workspace = true }

tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }

common = { path = "../common" }
forensics = { path = "../forensics", default-features = false }

# Dependencies for tests
[dev-dependencies]
httpmock = "0.8.3"
criterion = "0.8.2"

[build-dependencies]
vergen = { version = "10.0.0", features = ["build", "rustc"] }
