[package]
name = "forensics"
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true, optional = true }
glob = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
fastrand = { workspace = true }
chrono = { workspace = true }

nom = "8.0.0"
md-5 = "0.11.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
regex = "1.12.3"
base16ct = { version = "1.0.0", default-features = false }
digest-io = { version = "0.1.0", default-features = false }
byteorder = "1.5.0"
walkdir = "2.5.0"
home = "0.5.12"
simplelog = "0.12.2"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.39.3", default-features = false, features = [
    "escape-html",
] }
xml2json-rs = "1.0.1"
evtx = { version = "0.11.2", default-features = false, features = [
    "multithreading",
] }
ntfs = "0.4.0"
pelite = "0.10.0"
elf = "0.8.0"
ruzstd = "0.8.2"
lz4_flex = "0.13.0"
xz2 = { version = "0.1.7", default-features = false, features = ["static"] }
macos-unifiedlogs = "0.6.0"
plist = "1.9.0"
aes = "0.9.0"
cbc = "0.2.0"
csv = "1.4.0"
common = { path = "../common" }
timeline = { path = "../timeline" }
sunlight = "0.1.5"
miniz_oxide = { version = "0.9.1", features = ["std", "with-alloc"] }
lumination = "0.1.3"
snap = "1.1.1"
ext4-fs = "0.1.5"
calf = "0.2.1"


# Optional Stuff
url = { version = "2.5.8", optional = true }
yara-x = { version = "1.16.0", optional = true, default-features = false, features = [
    "constant-folding",
    "exact-atoms",
    "fast-regexp",
    "console-module",
    "dotnet-module",
    "elf-module",
    "hash-module",
    "lnk-module",
    "macho-module",
    "math-module",
    "pe-module",
    "string-module",
    "time-module",
    "linkme",
] }

# AWS Support
rusty-s3 = { version = "0.9.1", optional = true }

# GCP Support
jsonwebtoken = { version = "10.3.0", optional = true, features = ["aws_lc_rs"] }

# JS API
boa_engine = { version = "0.21.1", default-features = false, optional = true }
boa_gc = { version = "0.21.1", default-features = false, optional = true }
boa_runtime = { version = "0.21.1", default-features = false, optional = true }
futures-concurrency = { version = "7.7.1", default-features = false, optional = true }
futures-lite = { version = "2.6.1", default-features = false, optional = true }

# Windows API Dependencies
[target.'cfg(target_os = "windows")'.dependencies]
ntapi = "0.4.3"
windows-sys = { version = "0.61.2", default-features = false, features = [
    "Win32_System_Services",
] }

# Dependencies for tests
[dev-dependencies]
httpmock = "0.8.3"
criterion = "0.8.2"

[build-dependencies]
vergen = { version = "9.1.0", features = ["build", "rustc"] }

# Artemis features
[features]
default = ["yarax", "boa", "gcp", "aws"]
yarax = ["network", "dep:yara-x"]
aws = ["network", "dep:rusty-s3"]
gcp = ["network", "dep:jsonwebtoken"]
azure = ["network"]
api = ["network"]
network = ["dep:reqwest", "dep:url"]
boa = [
    "dep:boa_engine",
    "dep:boa_gc",
    "dep:boa_runtime",
    "dep:futures-concurrency",
    "dep:futures-lite",
]


# Some benchmarking
[[bench]]
name = "macho_benchmark"
harness = false

[[bench]]
name = "shimcache_benchmark"
harness = false

[[bench]]
name = "userassist_benchmark"
harness = false

[[bench]]
name = "bits_benchmark"
harness = false

[[bench]]
name = "jumplists_benchmark"
harness = false

[[bench]]
name = "amcache_benchmark"
harness = false
