[package]
name = "artemis-server"
license = "MIT"
edition = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
flate2 = { workspace = true }
glob = { workspace = true }

axum = { version = "0.7.4", default-features = false, features = [
    "http2",
    "json",
    "matched-path",
    "original-uri",
    "tokio",
    "tower-log",
    "form",
    "query",
    "ws",
    "multipart",
] }
futures = "0.3.30"
rust-embed = "8.3.0"
common = { path = "../common" }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
hyper = { version = "1.2.0", features = ["full"] }
