[package]
name = "artemis-webui"
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.11", features = ["csr"] }
leptos_router = { version = "0.6.11", default-features = false, features = [
    "csr",
] }
leptos_meta = { version = "0.6.11", features = ["csr"] }
leptos-use = { version = "0.10.10", default-features = false }

common = { path = "../common" }
reqwest = { workspace = true }
serde_json = { workspace = true }
web-sys = { version = "0.3.69", features = ["Location", "Window"] }
chrono = "0.4.38"
