[package]
name = "artemis-webui"
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.12", features = ["csr"] }
leptos_router = { version = "0.6.12", default-features = false, features = [
    "csr",
] }
leptos_meta = { version = "0.6.12", features = ["csr"] }

common = { path = "../common" }
reqwest = { workspace = true }
serde_json = { workspace = true }
web-sys = { version = "0.3.69", features = ["Location", "Window"] }
chrono = "0.4.38"
