[package]
name = "apollo"
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tauri = { version = "2.1.1", features = [] }

opensearch = { version = "2.3.0", default-features = false, features = [
    "native-tls",
] }

common = { path = "../../common" }

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }
vergen = { version = "9.0.2", features = ["build", "rustc"] }
