[package]
name = "apollo"
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tauri = { version = "2.5.1", features = [] }
home = "0.5.11"

opensearch = { version = "2.3.0", default-features = false, features = [
    "native-tls",
] }

common = { path = "../../common" }
timeline = { path = "../../timeline" }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-store = "2.2.0"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
vergen = { version = "9.0.6", features = ["build", "rustc"] }
